Work on resources

--- a/Resourses/html/index.html
+++ b/Resourses/html/index.html
@@ -14,7 +14,7 @@
 <header class="sticky-top">
     <div class=" bg-dark d-flex justify-content-between">
         <div class="navbar lg-ml-5">
-            <a class="navbar-brand" href="/">
+            <a class="navbar-brand" href="./index.html">
                 <img class="logo" src="images/logo-chocolate-wheat.webp" alt="logo-work-portal">
             </a>
         </div>
@@ -30,7 +30,7 @@
             <div class="collapse navbar-collapse " id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Начало</a>
+                        <a class="nav-link" href="./index.html">Начало</a>
                     </li>
                     <!--    Allow if user is loggedIN-->
                     <li class="nav-item active">
@@ -38,7 +38,7 @@
                     </li>
                     <!--    Allow if user is logged and have role Production or Service-->
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Знание</a>
+                        <a class="nav-link" href="./knowledge.html">Знание</a>
                     </li>
                     <!--    Allow for all-->
                     <li class="nav-item">
