--- a/Resourses/html/index.html
+++ b/Resourses/html/index.html
@@ -11,20 +11,14 @@
     <title>WorkPortal | Начало</title>
 </head>
 <body>
-<header class="sticky-top">
-    <div class=" bg-dark d-flex justify-content-between">
-        <div class="navbar lg-ml-5">
-            <a class="navbar-brand" href="./index.html">
-                <img class="logo" src="images/logo-chocolate-wheat.webp" alt="logo-work-portal">
-            </a>
-        </div>
+<header class="sticky-top bg-dark">
+    <div class="container">
         <nav class="navbar navbar-expand-lg navbar-light">
-            <button class="navbar-toggler" type="button" data-toggle="collapse"
-                    data-target="#navbarSupportedContent"
+            <a class="navbar-brand" href="./index.html"><img class="logo" src="images/logo-chocolate-wheat.webp"
+                                                             alt="logo-work-portal"></a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                     aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-               <span class="navbar-toggler-icon">
-                 <i class="fas fa-bars text-chocolate fa-2x"></i>
-              </span>
+                <i class="fas fa-bars text-chocolate fa-2x"></i>
             </button>
 
             <div class="collapse navbar-collapse " id="navbarSupportedContent">
@@ -32,7 +26,7 @@
                     <li class="nav-item">
                         <a class="nav-link" href="./index.html">Начало</a>
                     </li>
-                    <!--    Allow if user is loggedIN-->
+                    <!--    Allow if user is logged and have role Production or Service-->
                     <li class="nav-item active">
                         <a class="nav-link" href="#">Отпуск</a>
                     </li>
@@ -48,42 +42,40 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#">Списък принтери</a>
                     </li>
-
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">
+                            <i class="fa fa-envelope-o fa-lg text-chocolate">
+                            </i><span class="badge badge-wheat smallBadge">9+</span>
+                        </a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                           data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Име
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="#">Профил</a>
+                            <a class="dropdown-item" href="#">Настройки</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="#">Изход</a>
+                        </div>
+                    </li>
                 </ul>
                 <!--                <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Search</button>-->
             </div>
         </nav>
-        <div class="pull-right">
-            <ul class="nav pull-right">
-                <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Welcome, User <b class="caret"></b></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="/user/preferences"><i class="icon-cog"></i> Preferences</a></li>
-                        <li><a href="/help/support"><i class="icon-envelope"></i> Contact Support</a></li>
-                        <li class="divider"></li>
-                        <li><a href="/auth/logout"><i class="icon-off"></i> Logout</a></li>
-                    </ul>
-                </li>
-            </ul>
-        </div>
-
-<!--        <div class="float-right">-->
-<!--            <ul class="navbar-nav mr-auto">-->
-<!--                <li><a class="text-chocolate" href="#">Добре дошъл, Потребителю</a></li>-->
-<!--                <li><a class="text-chocolate" href="#">Изход</a></li>-->
-<!--            </ul>-->
-<!--        </div>-->
     </div>
 </header>
 <main>
     <p>sss 1</p>
     <p>sss 1</p>
-    <p>sss 1</p>
+    <p>sss s</p>
     <p>sss 1</p>
     <p>sss 1</p>
     <p>sss 1</p>
 </main>
 <footer>
-    <div class="container-fluid">
+    <div class="container-fluid m-2">
         <div class="row bg-secondary">
             <div class="container text-center">
                 <ul class="list-unstyled list-inline text-center">
@@ -102,7 +94,6 @@
         </div>
     </div>
 </footer>
-<!-- Footer -->
 <script src="js/jquery-3.5.1.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 </body>
