--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="bg">
 <head>
   <meta charset="utf-8">
   <title>WorkPortal</title>
@@ -10,5 +10,5 @@
 <link rel="stylesheet" href="styles.b5cbc9b700141801f117.css"></head>
 <body class="mat-typography font">
 <app-root></app-root>
-<script src="runtime.359d5ee4682f20e936e9.js" defer=""></script><script src="polyfills.bf99d438b005d57b2b31.js" defer=""></script><script src="main.c167ab60ff67bf9231e3.js" defer=""></script></body>
+<script src="runtime.359d5ee4682f20e936e9.js" defer=""></script><script src="polyfills.bf99d438b005d57b2b31.js" defer=""></script><script src="main.bffcbdb1158f05dff987.js" defer=""></script></body>
 </html>
